# phasicFlow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  READMEPostprocess.md  phasicFlowConfig.H.in
.github/scripts/: sync-wiki.py
.github/workflows/: markdownList.yml  static.yml  sync-wiki.yml
DEMSystems/: CMakeLists.txt
DEMSystems/DEMSystem/: DEMSystem.cpp  DEMSystem.hpp
DEMSystems/domainDistribute/: domainDistribute.cpp  domainDistribute.hpp
DEMSystems/grainDEMSystem/: grainDEMSystem.cpp  grainDEMSystem.hpp  grainFluidParticles.cpp  grainFluidParticles.hpp  grainFluidParticlesKernels.hpp
DEMSystems/sphereDEMSystem/: sphereDEMSystem.C  sphereDEMSystem.H  sphereDEMSystem.cpp  sphereDEMSystem.hpp  sphereFluidParticles.cpp  sphereFluidParticles.hpp  sphereFluidParticlesKernels.hpp
benchmarks/: readme.md
benchmarks/helicalMixer/: readme.md  runThisCase
benchmarks/helicalMixer/caseSetup/: interaction  particleInsertion  sphereShape
benchmarks/helicalMixer/helicalMixer_250K/: cleanThisCase  runThisCase
benchmarks/helicalMixer/helicalMixer_4m/: runThisCase
benchmarks/helicalMixer/helicalMixer_500k/: cleanThisCase
benchmarks/helicalMixer/settings/: geometryDict  particlesDict  settingsDict
benchmarks/helicalMixer_4MParticles/caseSetup/: interaction
benchmarks/rotatingDrum/: readme.md
benchmarks/rotatingDrum_1/caseSetup/: interaction  sphereShape
benchmarks/rotatingDrum_1/settings/: geometryDict  particlesDict  settingsDict
benchmarks/rotatingDrum_1MParticles/caseSetup/: interaction
benchmarks/rotatingDrum_1MParticles/settings/: domainDict  geometryDict  particlesDict
benchmarks/rotatingDrum_250kParticles/settings/: domainDict  geometryDict  particlesDict  settingsDict
benchmarks/rotatingDrum_2MParticles/settings/: domainDict  particlesDict  settingsDict
cmake/: autoComplete  bashrc  globals.cmake  makeExecutableGlobals.cmake  makeLibraryGlobals.cmake  preReq.cmake  zoltanInstallCheck.cmake
doc/: DTAGS  Doxyfile  customdoxygen.css  footer.html  header.html  howToBuild.md
doc/code-documentation/html/: AB2Kernels_8hpp.html  (+13715 more)
doc/mdDocs/: codingStyle.md  howToBuild-V1.0.md  howToBuild.md  howToUsePhasicFlow.md  mainpage.md  markdownList.yml  phasicFlowFeatures.md
solvers/: CMakeLists.txt
solvers/grainGranFlow/: CMakeLists.txt  createDEMComponents.hpp  grainGranFlow.cpp
solvers/iterateGeometry/: CMakeLists.txt  iterateGeometry.C  iterateGeometry.cpp
solvers/iterateSphereParticles/: CMakeLists.txt  createDEMComponents.hpp  iterateSphereParticles.cpp
solvers/sphereGranFlow/: CMakeLists.txt  createDEMComponents.H  createDEMComponents.hpp  sphereGranFlow.C  sphereGranFlow.cpp
src/: CMakeLists.txt
src/Geometry/: CMakeLists.txt
src/Integration/: CMakeLists.txt
src/Interaction/: CMakeLists.txt
src/MPIParallelization/: CMakeLists.txt  partitioning.cpp  partitioning.hpp
src/MotionModel/: CMakeLists.txt
src/Particles/: CMakeLists.txt
src/PostProcessData/: CMakeLists.txt  postprocessData.cpp  postprocessData.hpp
src/PostProcessData/fieldsDataBase/: fieldsDataBase.cpp  fieldsDataBaseTemplates.cpp
src/PostProcessData/method/: uniformDistribution.hpp
src/PostProcessData/operation/: PostprocessOperationSum.cpp  PostprocessOperationSum.hpp  fieldFunctions.hpp  postprocessOperation.cpp  postprocessOperation.hpp
src/PostProcessData/operation/includeMask/: includeMask.cpp
src/PostProcessData/postprocessComponent/: PostprocessComponent.cpp  PostprocessComponent.hpp  PostprocessComponentGaussian.hpp  PostprocessComponents.cpp  particleProbePostprocessComponent.cpp  particleProbePostprocessComponent.hpp  postprocessComponent.hpp
src/PostProcessData/region/regionFields.hpp/: regionField.hpp
src/PostProcessData/region/regionPoints/: centerPointsRegionPoints.cpp  centerPointsRegionPoints.hpp  lineRegionPoints.cpp  lineRegionPoints.hpp  regionPoints.hpp  sphereRegionPoints.cpp  sphereRegionPoints.hpp
src/PostprocessData/: CMakeLists.txt  readme.md
src/Property/: CMakeLists.txt  property.C  property.H  property.cpp  property.hpp
src/demComponent/: demComponent.H  demComponent.hpp
src/phasicFlow/: CMakeLists.txt
src/setHelpers/: finalize.H  finalize.hpp  initialize.H  initialize.hpp  initialize_Control.H  initialize_Control.hpp  setPointStructure.H  setPointStructure.hpp  setProperty.H  setProperty.hpp  setSurfaceGeometry.H  setSurfaceGeometry.hpp
tutorials/: README.md
utilities/: CMakeLists.txt
utilities/Utilities/: CMakeLists.txt  readControlDict.C  readControlDict.H  readControlDict.cpp  readControlDict.hpp  readFromTimeFolder.C  readFromTimeFolder.H  readFromTimeFolder.cpp  readFromTimeFolder.hpp  utilityFunctions.H  utilityFunctions.hpp  vtkFile.cpp
utilities/checkPhasicFlow/: CMakeLists.txt  checkPhasicFlow.C  checkPhasicFlow.cpp
utilities/geometryPhasicFlow/: CMakeLists.txt  README.md  geometryPhasicFlow.C  geometryPhasicFlow.cpp
utilities/pFlowToVTK/: CMakeLists.txt  README.md  fileSeries.cpp  fileSeries.hpp  geometric.C  geometric.H  geometric.cpp  geometric.hpp  pFlowToVTK.C  pFlowToVTK.cpp  pointFieldToVTK.H  pointFieldToVTK.cpp  pointFieldToVTK.hpp  triSurfaceFieldToVTK.H  triSurfaceFieldToVTK.cpp  triSurfaceFieldToVTK.hpp  vtkFile.C  vtkFile.H
utilities/particlesPhasicFlow/: CMakeLists.txt  README.md  particlesPhasicFlow.C  particlesPhasicFlow.cpp  setFields.H  setFields.hpp
utilities/postprocessPhasicFlow/: CMakeLists.txt  IncludeMask.H  IncludeMask.hpp  IncludeMasks.C  IncludeMasks.cpp  ProcessField.H  ProcessField.hpp  ProcessFields.C  ProcessFields.cpp  cellMapper.cpp  cellMapper.hpp  countField.cpp  countField.hpp  countFields.cpp  countFields.hpp  fieldOperations.H  fieldOperations.hpp  includeMask.C  includeMask.H  includeMask.cpp  includeMask.hpp  pointRectCell.H  pointRectCell.hpp  postprocess.C  postprocess.H  postprocess.cpp  postprocess.hpp  postprocessPhasicFlow.C  postprocessPhasicFlow.cpp  processField.C  processField.H  processField.cpp  processField.hpp  readme.md  rectMeshField.H  rectMeshField.hpp  rectMeshFieldToVTK.H  rectMeshFieldToVTK.hpp  rectMeshFields.H  rectMeshFields.hpp  (+3 more)
(+1497 files in other folders)
